@@ -1,3 +1,6 @@
+3767.	[func]		Log explicitly when using rndc.key to configure
+			command channel. [RT #35316]
+
 3766.	[cleanup]	Fixed problems with building outside the source
 			tree when using native PKCS#11. [RT #35459]
 
@@ -1480,7 +1483,7 @@
 			     when queryperf is available.
 			 - the encoding of PASSTHRU action to "rpz-passthru".
 			     (The old encoding is still accepted.)
-		       [RT #26172]
+			[RT #26172]
 
 
 3329.	[bug]		Handle RRSIG signer-name case consistently: We
